--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
-    "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24"
+    "postcss": "^8.4.13"
   }
 }
