--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
+    "babel-eslint": "^10.1.0",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5"
   }
